<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="@color/screen_purple"
    >

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFF"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/primary_purple"
            android:orientation="horizontal"
            android:gravity="center">
           <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_weight="1">

               <TextView
                   android:id="@+id/welcome_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text= "@string/welcome"
                   android:textColor="#FFFFFF"
                   android:textSize="20sp"
                   android:textStyle="bold" />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/space"
                   android:textColor="#FFFFFF"
                   android:textSize="20sp" />

               <TextView
                   android:id="@+id/welcome_user_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:text="@string/user"
                   android:textColor="#FFFFFF"
                   android:textSize="20sp" />
        </LinearLayout>

            <Button
                android:id="@+id/logout_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/logout_btn_image" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topbar"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/primary_purple">

            <TextView
                android:id="@+id/quiz_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"

                android:text="@string/quiz_no"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/quiz_no_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="#30CF6F"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/score_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/score"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="#30CF6F"
                android:textSize="20dp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/timer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/timer_image" />

        <ProgressBar
            android:id="@+id/time_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:max="100"
            android:progress="0"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/remaining_time_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer_layout"
        android:layout_marginLeft="130dp"
        android:orientation="horizontal"
        android:layout_marginBottom="6dp">

        <TextView
            android:id="@+id/remaining_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining_time_30_seconds_text"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/questionImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:layout_below="@id/remaining_time_text_layout"

        />

    <LinearLayout
        android:id="@+id/answerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/questionImage"
        android:background="@color/card_purple"
        android:orientation="vertical"
       >

        <LinearLayout
            android:id="@+id/answerGroupsub1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">



            <Button
                android:id="@+id/btn1"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_1"
                android:textSize="48sp"
                />

            <Button
                android:id="@+id/btn2"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_2"
                android:textSize="48sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_3"
                android:textSize="48sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/answerGroupsub2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answerGroupsub2"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
           >

            <Button
                android:id="@+id/btn4"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_4"
                android:textSize="48sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_5"
                android:textSize="48sp" />


            <Button
                android:id="@+id/btn6"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_6"
                android:textSize="48sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/answerGroupsub3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answerGroupsub2"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/btn7"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_7"
                android:textSize="48sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_8"
                android:textSize="48sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_9"
                android:textSize="48sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/answerGroupsub4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answerGroupsub2"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="6dp">


            <Button
                android:id="@+id/btn0"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_custom_background"
                android:text="@string/_0_2"
                android:textSize="48sp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="152dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/primary_purple"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFEFE"
                android:textSize="34sp" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="152dp"
                android:layout_height="76dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/primary_purple"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="#FFFEFE"
                android:textSize="34sp"
                android:visibility="gone" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>